# Deep-Learning-in-Modern-C-Plus-Plus

./: README.md
Chapter 02/1_basic_cpp/: CMakeLists.txt  hello_world.cpp
Chapter 02/2_numeric_functional_algorithms/: CMakeLists.txt  README.md
Chapter 02/3_lambdas/: CMakeLists.txt
Chapter 02/4_eigen_example/: CMakeLists.txt
Chapter 02/5_gen_random_numbers/: using_stat_distros.cpp
Chapter 02/chapter_2/: README.md
Chapter 02/chapter_2/2_numeric_functional_algorithms/src/: using_algorithms.cpp
Chapter 02/chapter_2/3_lambdas/: README.md
Chapter 02/chapter_2/3_lambdas/src/: main.cpp
Chapter 02/chapter_2/5_gen_random_numbers/: CMakeLists.txt
Chapter 03/1_googletest_setup/: CMakeLists.txt
Chapter 03/1_googletest_setup/include/: my_functions.h
Chapter 03/1_googletest_setup/tests/: test_find_middle.cpp
Chapter 03/2_stat_tests/: CMakeLists.txt
Chapter 03/2_stat_tests/src/: glorot.cpp
Chapter 03/chapter_3/: README.md
Chapter 03/chapter_3/1_googletest_setup/src/: my_functions.cpp
Chapter 03/chapter_3/1_googletest_setup/tests/: test_my_functions.cpp
Chapter 03/chapter_3/2_stat_tests/include/: glorot.h
Chapter 03/chapter_3/2_stat_tests/tests/: glorot_tests.cpp
Chapter 04/: README.md
Chapter 04/chapter_4/: CMakeLists.txt
Chapter 04/chapter_4/src/: same_padding_example.cpp  using_opencv.cpp
Chapter 04/src/: applying_sobel.cpp  tensor_convolutions.cpp  using_padding.cpp  using_strides.cpp  using_tensors.cpp
Chapter 05/: CMakeLists.txt
Chapter 05/chapter_5/: README.md
Chapter 05/chapter_5/src/: mlp_example.cpp  sigmoid.cpp
Chapter 05/include/: fully_connected_layers.hpp
Chapter 05/src/: fc_layer_func.cpp  using_flatten.cpp
Chapter 06/: CMakeLists.txt
Chapter 06/chapter_6/: README.md
Chapter 06/chapter_6/src/: fitting_example.cpp  h0_h1_example.cpp
Chapter 06/src/: bce_example.cpp  using_gradient.cpp
Chapter 07/chapter_7/: CMakeLists.txt  README.md
Chapter 07/chapter_7/include/book/: activation_functions.hpp  definitions.hpp  layers.hpp  utils.hpp
Chapter 07/chapter_7/src/: batched_softmax.cpp  using_softmax.cpp
Chapter 07/include/book/: book.hpp  loss_functions.hpp
Chapter 07/src/: iris_example.cpp
Chapter 08/: CMakeLists.txt  README.md
Chapter 08/src/: pooling_example.cpp
Chapter 09/: CMakeLists.txt
Chapter 09/chapter_9/: README.md
Chapter 09/chapter_9/include/: image_io.hpp
Chapter 09/chapter_9/src/: conv_autograd.cpp  gradient_descent_example.cpp
Chapter 09/src/: conv_grad_example.cpp
Chapter 10/: CMakeLists.txt
Chapter 10/chapter_10/: README.md
Chapter 10/chapter_10/cuda_example/src/: functions.cu
Chapter 10/chapter_10/include/book/: activation_functions.hpp  book.hpp  layers.hpp
Chapter 10/chapter_10/src/: improving_backpropagation.cpp
Chapter 10/cuda_example/: CMakeLists.txt
Chapter 10/cuda_example/include/: functions.hpp
Chapter 10/cuda_example/src/: main.cc
Chapter 10/include/book/: data_io.hpp  loss_functions.hpp  metrics.hpp
Chapter 10/src/: naive_backpropagation.cpp
Chapter 10/src/lib/: data_io.cpp
Chapter 11/: CMakeLists.txt
Chapter 11/chapter_11/: README.md
Chapter 11/chapter_11/include/book/: book.hpp  layers.hpp  metrics.hpp  utils.hpp
Chapter 11/chapter_11/src/: fitting_polynoms.cpp  overfitting_example.cpp  penalization.cpp
Chapter 11/chapter_11/src/lib/: data_io.cpp  metrics.cpp
Chapter 11/include/book/: data_io.hpp  image_routines.hpp  training.hpp
Chapter 11/src/: data_augmentation.cpp  dropout_example.cpp
Chapter 11/src/lib/: image_routines.cpp
Chapter 12/: README.md
Chapter 12/chapter_12/: CMakeLists.txt
Chapter 12/chapter_12/src/: minibatch.cpp  sgd_example.cpp  stratification.cpp
Chapter 12/chapter_12/src/lib/: data_io.cpp
Chapter 12/include/book/: book.hpp  layers.hpp  loss_functions.hpp
Chapter 12/src/: using_metrics.cpp
Chapter 12/src/lib/: metrics.cpp
Chapter 13/: CMakeLists.txt
Chapter 13/chapter_13/: README.md
Chapter 13/chapter_13/include/book/: optimizers.hpp  utils.hpp
Chapter 13/include/book/: data_io.hpp  layers.hpp
Chapter 13/src/: main.cpp
Chapter 14/chapter_14/: CMakeLists.txt  README.md
Chapter 14/include/book/: data_io.hpp
Chapter 14/src/: face_detection.cpp  main.cpp
Chapter 15/chapter_15/: CMakeLists.txt  README.md
Chapter 15/chapter_15/include/book/: data_io.hpp
Chapter 15/chapter_15/src/lib/: image_routines.cpp
Chapter 15/include/: training_dogs_vs_cats.hpp
Chapter 15/include/book/: metrics.hpp
Chapter 15/src/: 3conv_data_augmentation.cpp  3conv_dropout_net.cpp  3conv_net.cpp
Chapter 16/: README.md
Chapter 16/chapter_16/: CMakeLists.txt
Chapter 16/chapter_16/include/: training_vgg_model.hpp
Chapter 16/chapter_16/include/book/: image_routines.hpp  weight_initialization.hpp
Chapter 16/chapter_16/src/: training_dogs_cats.cpp  training_tf_flowers.cpp  training_tf_flowers_with_transfer_learning.cpp
Chapter 16/include/: training_model.hpp
Chapter 16/include/book/: data_io.hpp  utils.hpp
Chapter 16/src/: training_tf_flowers_vgg.cpp
Chapter 17/: README.md
Chapter 17/chapter_17/: CMakeLists.txt
Chapter 17/chapter_17/include/: training_oxford_pets.hpp  training_regression_model.hpp
Chapter 17/chapter_17/src/lib/: data_io.cpp
Chapter 17/include/: vgg_training_oxford_pets.hpp
Chapter 17/include/book/: activation_functions.hpp  data_io.hpp  layers.hpp
Chapter 17/src/: fine_tuning_vgg_net_training_oxford_pets.cpp  net_training_oxford_pets.cpp  regression_model.cpp
